...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Inventory List'),
        actions: <Widget>[
          BlocBuilder<AuthBloc, AuthState>(
            builder: (BuildContext context, AuthState authState) {
              if (!authState.hasPermission('roles.read')) {
                return const SizedBox.shrink();
              }
...
